@@ -1,11 +1,7 @@
 package edu.mit.compilers.opt;
 
 import java.util.HashMap;
-import java.util.LinkedList;
 import java.util.List;
-
-import edu.mit.compilers.codegen.nodes.MidNode;
-
 
 public class Analyzer<S extends State<S>, T extends Transfer<S>> {
 	
@@ -16,57 +12,45 @@ public class Analyzer<S extends State<S>, T extends Transfer<S>> {
 	public Analyzer(S s, T t){
 		startState = s;
 		transferFunction = t;
-		outHash = new HashMap<Block, S>();
+		outHash = new HashMap<Block,S>();
 	}
 	
-	public S analyze(){
-		List<Block> worklist = new LinkedList<Block>();
-		//temporary hack
-		//worklist.add(new Block("A"));
-		//worklist.add(new Block("B"));
-		//worklist.add(new Block("C"));
-		
+	public void analyze(){		
 		// get all the blocks
-		worklist = Block.getBlocks();
+		List<Block> worklist = Block.getBlocks();
 		
 		//Set all the outs to bottom
 		for (Block block : worklist) {
-			outHash.put(block, transferFunction.getBottomState());
+			outHash.put(block, startState.getBottomState());
 		}
 		
 		//Do the first node
-		Block n0 = Block.getHead();
+		Block n0 = Block.getFirstBlock();
+		assert(n0.getPredecessors().size() == 0);
 		outHash.put(n0,this.transferFunction.apply(n0, startState));
 		worklist.remove(n0);
 
 		while (!worklist.isEmpty()){
-			Block currentBlock = worklist.removeFirst();
+			Block currentBlock = worklist.remove(0);
 			S in = getInState(currentBlock);
 			S out = this.transferFunction.apply(currentBlock, in);
 			if (out != outHash.get(out)){
 				outHash.put(currentBlock, out);
 				worklist.addAll(currentBlock.getSuccessors());
 			}
-			//return with less perfect result if it takes a really long time?
+			//TODO: return with less perfect result if it takes a really long time?
 		}
-		return state;
 	}
 	
 	public S getInState(Block b){
-		S out = new S();
-		foreach (m in b.getPredecessors()){
-			out.append(outHash.get(m));
+		S out = null;
+		for (Block m : b.getPredecessors()){
+			if (out == null)
+				out = outHash.get(m);
+			else
+				out.join(outHash.get(m));
 		}
 		return out;
 	}
 	
-	public static void main(String[] args){
-		TestState ts = new TestState();
-		TestTransfer tf = new TestTransfer();
-		Analyzer<TestState, Transfer<TestState>> a = new Analyzer<TestState, Transfer<TestState>>(ts, tf);
-		TestState out = a.analyze();
-		System.out.println(out);
-		
-	}
-
 }
